Added GameObjects class and updated the camera
Added a GameObjects class to handle the objects in the game better. However it is not 100% working at the moment. Also updated the camera by adding better movement detection, fixing a typo and adding a small delay to when the cursor gets reset

--- a/DX11 Framework (Final)/DX11 Framework.vcxproj
+++ b/DX11 Framework (Final)/DX11 Framework.vcxproj
@@ -379,6 +379,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="DDSTextureLoader.cpp" />
     <ClCompile Include="DX11 Framework.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="OBJLoader.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -388,6 +389,7 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="DDSTextureLoader.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="OBJLoader.h" />
     <CLInclude Include="resource.h" />
     <ClInclude Include="Structures.h" />
