--- a/DX11 Framework (Final)/DX11 Framework.vcxproj.filters
+++ b/DX11 Framework (Final)/DX11 Framework.vcxproj.filters
@@ -16,6 +16,7 @@
     <ClInclude Include="OBJLoader.h" />
     <ClInclude Include="Structures.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="GameObject.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
@@ -23,6 +24,7 @@
     <ClCompile Include="DDSTextureLoader.cpp" />
     <ClCompile Include="OBJLoader.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="GameObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CLInclude Include="resource.h">
